y.output
State 106 conflicts: 1 shift/reduce


Grammar

    0 $accept: Goal $end

    1 Goal: BeforeMain MainFunc

    2 BeforeMain: BeforeMain BeforeMainStatement
    3           | %empty

    4 BeforeMainStatement: VarDefn
    5                    | FuncDefn
    6                    | FuncDecl

    7 VarDefn: Type Identifier ';'
    8        | Type Identifier '[' INTEGER ']' ';'

    9 VarDecls: VarDecls ',' VarDecl
   10         | %empty

   11 VarDecl: Type Identifier
   12        | Type Identifier '[' INTEGER ']'
   13        | Type Identifier '[' ']'

   14 FuncDefn: Type Identifier '(' VarDecls ')' '{' InsideFuncStatements '}'

   15 InsideFuncStatements: InsideFuncStatements FuncDecl
   16                     | InsideFuncStatements Statement
   17                     | %empty

   18 FuncDecl: Type Identifier '(' VarDecls ')' ';'

   19 MainFunc: T_INT MAIN '(' ')' '{' InsideFuncStatements '}'

   20 Type: T_INT

   21 Statements: Statements Statement
   22           | %empty

   23 Statement: '{' Statements '}'
   24          | IF '(' Expression ')' Statement
   25          | IF '(' Expression ')' Statement ELSE Statement
   26          | WHILE '(' Expression ')' Statement
   27          | Identifier '=' Expression ';'
   28          | Identifier '[' Expression ']' '=' Expression ';'
   29          | VarDefn
   30          | RETURN Expression ';'

   31 Expression: Expression '+' Expression
   32           | Expression '-' Expression
   33           | Expression '*' Expression
   34           | Expression '/' Expression
   35           | Expression '%' Expression
   36           | Expression '<' Expression
   37           | Expression '>' Expression
   38           | Expression EQUAL Expression
   39           | Expression NOTEQUAL Expression
   40           | Expression LAND Expression
   41           | Expression LOR Expression
   42           | Expression '[' Expression ']'
   43           | INTEGER
   44           | Identifier
   45           | '!' Expression
   46           | '-' Expression
   47           | Identifier '(' Params ')'
   48           | '(' Expression ')'

   49 Params: Params Identifier
   50       | %empty

   51 Identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 45
'%' (37) 35
'(' (40) 14 18 19 24 25 26 47 48
')' (41) 14 18 19 24 25 26 47 48
'*' (42) 33
'+' (43) 31
',' (44) 9
'-' (45) 32 46
'/' (47) 34
';' (59) 7 8 18 27 28 30
'<' (60) 36
'=' (61) 27 28
'>' (62) 37
'[' (91) 8 12 13 28 42
']' (93) 8 12 13 28 42
'{' (123) 14 19 23
'}' (125) 14 19 23
error (256)
EQUAL (258) 38
NOTEQUAL (259) 39
LAND (260) 40
LOR (261) 41
T_INT (262) 19 20
MAIN (263) 19
IF (264) 24 25
ELSE (265) 25
WHILE (266) 26
RETURN (267) 30
INTEGER (268) 8 12 43
IDENTIFIER (269) 51
NEGA (270)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Goal (34)
    on left: 1, on right: 0
BeforeMain (35)
    on left: 2 3, on right: 1 2
BeforeMainStatement (36)
    on left: 4 5 6, on right: 2
VarDefn (37)
    on left: 7 8, on right: 4 29
VarDecls (38)
    on left: 9 10, on right: 9 14 18
VarDecl (39)
    on left: 11 12 13, on right: 9
FuncDefn (40)
    on left: 14, on right: 5
InsideFuncStatements (41)
    on left: 15 16 17, on right: 14 15 16 19
FuncDecl (42)
    on left: 18, on right: 6 15
MainFunc (43)
    on left: 19, on right: 1
Type (44)
    on left: 20, on right: 7 8 11 12 13 14 18
Statements (45)
    on left: 21 22, on right: 21 23
Statement (46)
    on left: 23 24 25 26 27 28 29 30, on right: 16 21 24 25 26
Expression (47)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48,
    on right: 24 25 26 27 28 30 31 32 33 34 35 36 37 38 39 40 41 42
    45 46 48
Params (48)
    on left: 49 50, on right: 47 49
Identifier (49)
    on left: 51, on right: 7 8 11 12 13 14 18 27 28 44 47 49


State 0

    0 $accept: . Goal $end

    $default  reduce using rule 3 (BeforeMain)

    Goal        go to state 1
    BeforeMain  go to state 2


State 1

    0 $accept: Goal . $end

    $end  shift, and go to state 3


State 2

    1 Goal: BeforeMain . MainFunc
    2 BeforeMain: BeforeMain . BeforeMainStatement

    T_INT  shift, and go to state 4

    BeforeMainStatement  go to state 5
    VarDefn              go to state 6
    FuncDefn             go to state 7
    FuncDecl             go to state 8
    MainFunc             go to state 9
    Type                 go to state 10


State 3

    0 $accept: Goal $end .

    $default  accept


State 4

   19 MainFunc: T_INT . MAIN '(' ')' '{' InsideFuncStatements '}'
   20 Type: T_INT .

    MAIN  shift, and go to state 11

    $default  reduce using rule 20 (Type)


State 5

    2 BeforeMain: BeforeMain BeforeMainStatement .

    $default  reduce using rule 2 (BeforeMain)


State 6

    4 BeforeMainStatement: VarDefn .

    $default  reduce using rule 4 (BeforeMainStatement)


State 7

    5 BeforeMainStatement: FuncDefn .

    $default  reduce using rule 5 (BeforeMainStatement)


State 8

    6 BeforeMainStatement: FuncDecl .

    $default  reduce using rule 6 (BeforeMainStatement)


State 9

    1 Goal: BeforeMain MainFunc .

    $default  reduce using rule 1 (Goal)


State 10

    7 VarDefn: Type . Identifier ';'
    8        | Type . Identifier '[' INTEGER ']' ';'
   14 FuncDefn: Type . Identifier '(' VarDecls ')' '{' InsideFuncStatements '}'
   18 FuncDecl: Type . Identifier '(' VarDecls ')' ';'

    IDENTIFIER  shift, and go to state 12

    Identifier  go to state 13


State 11

   19 MainFunc: T_INT MAIN . '(' ')' '{' InsideFuncStatements '}'

    '('  shift, and go to state 14


State 12

   51 Identifier: IDENTIFIER .

    $default  reduce using rule 51 (Identifier)


State 13

    7 VarDefn: Type Identifier . ';'
    8        | Type Identifier . '[' INTEGER ']' ';'
   14 FuncDefn: Type Identifier . '(' VarDecls ')' '{' InsideFuncStatements '}'
   18 FuncDecl: Type Identifier . '(' VarDecls ')' ';'

    '['  shift, and go to state 15
    ';'  shift, and go to state 16
    '('  shift, and go to state 17


State 14

   19 MainFunc: T_INT MAIN '(' . ')' '{' InsideFuncStatements '}'

    ')'  shift, and go to state 18


State 15

    8 VarDefn: Type Identifier '[' . INTEGER ']' ';'

    INTEGER  shift, and go to state 19


State 16

    7 VarDefn: Type Identifier ';' .

    $default  reduce using rule 7 (VarDefn)


State 17

   14 FuncDefn: Type Identifier '(' . VarDecls ')' '{' InsideFuncStatements '}'
   18 FuncDecl: Type Identifier '(' . VarDecls ')' ';'

    $default  reduce using rule 10 (VarDecls)

    VarDecls  go to state 20


State 18

   19 MainFunc: T_INT MAIN '(' ')' . '{' InsideFuncStatements '}'

    '{'  shift, and go to state 21


State 19

    8 VarDefn: Type Identifier '[' INTEGER . ']' ';'

    ']'  shift, and go to state 22


State 20

    9 VarDecls: VarDecls . ',' VarDecl
   14 FuncDefn: Type Identifier '(' VarDecls . ')' '{' InsideFuncStatements '}'
   18 FuncDecl: Type Identifier '(' VarDecls . ')' ';'

    ','  shift, and go to state 23
    ')'  shift, and go to state 24


State 21

   19 MainFunc: T_INT MAIN '(' ')' '{' . InsideFuncStatements '}'

    $default  reduce using rule 17 (InsideFuncStatements)

    InsideFuncStatements  go to state 25


State 22

    8 VarDefn: Type Identifier '[' INTEGER ']' . ';'

    ';'  shift, and go to state 26


State 23

    9 VarDecls: VarDecls ',' . VarDecl

    T_INT  shift, and go to state 27

    VarDecl  go to state 28
    Type     go to state 29


State 24

   14 FuncDefn: Type Identifier '(' VarDecls ')' . '{' InsideFuncStatements '}'
   18 FuncDecl: Type Identifier '(' VarDecls ')' . ';'

    ';'  shift, and go to state 30
    '{'  shift, and go to state 31


State 25

   15 InsideFuncStatements: InsideFuncStatements . FuncDecl
   16                     | InsideFuncStatements . Statement
   19 MainFunc: T_INT MAIN '(' ')' '{' InsideFuncStatements . '}'

    T_INT       shift, and go to state 27
    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    RETURN      shift, and go to state 34
    IDENTIFIER  shift, and go to state 12
    '{'         shift, and go to state 35
    '}'         shift, and go to state 36

    VarDefn     go to state 37
    FuncDecl    go to state 38
    Type        go to state 39
    Statement   go to state 40
    Identifier  go to state 41


State 26

    8 VarDefn: Type Identifier '[' INTEGER ']' ';' .

    $default  reduce using rule 8 (VarDefn)


State 27

   20 Type: T_INT .

    $default  reduce using rule 20 (Type)


State 28

    9 VarDecls: VarDecls ',' VarDecl .

    $default  reduce using rule 9 (VarDecls)


State 29

   11 VarDecl: Type . Identifier
   12        | Type . Identifier '[' INTEGER ']'
   13        | Type . Identifier '[' ']'

    IDENTIFIER  shift, and go to state 12

    Identifier  go to state 42


State 30

   18 FuncDecl: Type Identifier '(' VarDecls ')' ';' .

    $default  reduce using rule 18 (FuncDecl)


State 31

   14 FuncDefn: Type Identifier '(' VarDecls ')' '{' . InsideFuncStatements '}'

    $default  reduce using rule 17 (InsideFuncStatements)

    InsideFuncStatements  go to state 43


State 32

   24 Statement: IF . '(' Expression ')' Statement
   25          | IF . '(' Expression ')' Statement ELSE Statement

    '('  shift, and go to state 44


State 33

   26 Statement: WHILE . '(' Expression ')' Statement

    '('  shift, and go to state 45


State 34

   30 Statement: RETURN . Expression ';'

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 50
    Identifier  go to state 51


State 35

   23 Statement: '{' . Statements '}'

    $default  reduce using rule 22 (Statements)

    Statements  go to state 52


State 36

   19 MainFunc: T_INT MAIN '(' ')' '{' InsideFuncStatements '}' .

    $default  reduce using rule 19 (MainFunc)


State 37

   29 Statement: VarDefn .

    $default  reduce using rule 29 (Statement)


State 38

   15 InsideFuncStatements: InsideFuncStatements FuncDecl .

    $default  reduce using rule 15 (InsideFuncStatements)


State 39

    7 VarDefn: Type . Identifier ';'
    8        | Type . Identifier '[' INTEGER ']' ';'
   18 FuncDecl: Type . Identifier '(' VarDecls ')' ';'

    IDENTIFIER  shift, and go to state 12

    Identifier  go to state 53


State 40

   16 InsideFuncStatements: InsideFuncStatements Statement .

    $default  reduce using rule 16 (InsideFuncStatements)


State 41

   27 Statement: Identifier . '=' Expression ';'
   28          | Identifier . '[' Expression ']' '=' Expression ';'

    '='  shift, and go to state 54
    '['  shift, and go to state 55


State 42

   11 VarDecl: Type Identifier .
   12        | Type Identifier . '[' INTEGER ']'
   13        | Type Identifier . '[' ']'

    '['  shift, and go to state 56

    $default  reduce using rule 11 (VarDecl)


State 43

   14 FuncDefn: Type Identifier '(' VarDecls ')' '{' InsideFuncStatements . '}'
   15 InsideFuncStatements: InsideFuncStatements . FuncDecl
   16                     | InsideFuncStatements . Statement

    T_INT       shift, and go to state 27
    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    RETURN      shift, and go to state 34
    IDENTIFIER  shift, and go to state 12
    '{'         shift, and go to state 35
    '}'         shift, and go to state 57

    VarDefn     go to state 37
    FuncDecl    go to state 38
    Type        go to state 39
    Statement   go to state 40
    Identifier  go to state 41


State 44

   24 Statement: IF '(' . Expression ')' Statement
   25          | IF '(' . Expression ')' Statement ELSE Statement

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 58
    Identifier  go to state 51


State 45

   26 Statement: WHILE '(' . Expression ')' Statement

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 59
    Identifier  go to state 51


State 46

   43 Expression: INTEGER .

    $default  reduce using rule 43 (Expression)


State 47

   46 Expression: '-' . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 60
    Identifier  go to state 51


State 48

   45 Expression: '!' . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 61
    Identifier  go to state 51


State 49

   48 Expression: '(' . Expression ')'

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 62
    Identifier  go to state 51


State 50

   30 Statement: RETURN Expression . ';'
   31 Expression: Expression . '+' Expression
   32           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '%' Expression
   36           | Expression . '<' Expression
   37           | Expression . '>' Expression
   38           | Expression . EQUAL Expression
   39           | Expression . NOTEQUAL Expression
   40           | Expression . LAND Expression
   41           | Expression . LOR Expression
   42           | Expression . '[' Expression ']'

    EQUAL     shift, and go to state 63
    NOTEQUAL  shift, and go to state 64
    LAND      shift, and go to state 65
    LOR       shift, and go to state 66
    '<'       shift, and go to state 67
    '>'       shift, and go to state 68
    '+'       shift, and go to state 69
    '-'       shift, and go to state 70
    '*'       shift, and go to state 71
    '/'       shift, and go to state 72
    '%'       shift, and go to state 73
    '['       shift, and go to state 74
    ';'       shift, and go to state 75


State 51

   44 Expression: Identifier .
   47           | Identifier . '(' Params ')'

    '('  shift, and go to state 76

    $default  reduce using rule 44 (Expression)


State 52

   21 Statements: Statements . Statement
   23 Statement: '{' Statements . '}'

    T_INT       shift, and go to state 27
    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    RETURN      shift, and go to state 34
    IDENTIFIER  shift, and go to state 12
    '{'         shift, and go to state 35
    '}'         shift, and go to state 77

    VarDefn     go to state 37
    Type        go to state 78
    Statement   go to state 79
    Identifier  go to state 41


State 53

    7 VarDefn: Type Identifier . ';'
    8        | Type Identifier . '[' INTEGER ']' ';'
   18 FuncDecl: Type Identifier . '(' VarDecls ')' ';'

    '['  shift, and go to state 15
    ';'  shift, and go to state 16
    '('  shift, and go to state 80


State 54

   27 Statement: Identifier '=' . Expression ';'

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 81
    Identifier  go to state 51


State 55

   28 Statement: Identifier '[' . Expression ']' '=' Expression ';'

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 82
    Identifier  go to state 51


State 56

   12 VarDecl: Type Identifier '[' . INTEGER ']'
   13        | Type Identifier '[' . ']'

    INTEGER  shift, and go to state 83
    ']'      shift, and go to state 84


State 57

   14 FuncDefn: Type Identifier '(' VarDecls ')' '{' InsideFuncStatements '}' .

    $default  reduce using rule 14 (FuncDefn)


State 58

   24 Statement: IF '(' Expression . ')' Statement
   25          | IF '(' Expression . ')' Statement ELSE Statement
   31 Expression: Expression . '+' Expression
   32           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '%' Expression
   36           | Expression . '<' Expression
   37           | Expression . '>' Expression
   38           | Expression . EQUAL Expression
   39           | Expression . NOTEQUAL Expression
   40           | Expression . LAND Expression
   41           | Expression . LOR Expression
   42           | Expression . '[' Expression ']'

    EQUAL     shift, and go to state 63
    NOTEQUAL  shift, and go to state 64
    LAND      shift, and go to state 65
    LOR       shift, and go to state 66
    '<'       shift, and go to state 67
    '>'       shift, and go to state 68
    '+'       shift, and go to state 69
    '-'       shift, and go to state 70
    '*'       shift, and go to state 71
    '/'       shift, and go to state 72
    '%'       shift, and go to state 73
    '['       shift, and go to state 74
    ')'       shift, and go to state 85


State 59

   26 Statement: WHILE '(' Expression . ')' Statement
   31 Expression: Expression . '+' Expression
   32           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '%' Expression
   36           | Expression . '<' Expression
   37           | Expression . '>' Expression
   38           | Expression . EQUAL Expression
   39           | Expression . NOTEQUAL Expression
   40           | Expression . LAND Expression
   41           | Expression . LOR Expression
   42           | Expression . '[' Expression ']'

    EQUAL     shift, and go to state 63
    NOTEQUAL  shift, and go to state 64
    LAND      shift, and go to state 65
    LOR       shift, and go to state 66
    '<'       shift, and go to state 67
    '>'       shift, and go to state 68
    '+'       shift, and go to state 69
    '-'       shift, and go to state 70
    '*'       shift, and go to state 71
    '/'       shift, and go to state 72
    '%'       shift, and go to state 73
    '['       shift, and go to state 74
    ')'       shift, and go to state 86


State 60

   31 Expression: Expression . '+' Expression
   32           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '%' Expression
   36           | Expression . '<' Expression
   37           | Expression . '>' Expression
   38           | Expression . EQUAL Expression
   39           | Expression . NOTEQUAL Expression
   40           | Expression . LAND Expression
   41           | Expression . LOR Expression
   42           | Expression . '[' Expression ']'
   46           | '-' Expression .

    '['  shift, and go to state 74

    $default  reduce using rule 46 (Expression)


State 61

   31 Expression: Expression . '+' Expression
   32           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '%' Expression
   36           | Expression . '<' Expression
   37           | Expression . '>' Expression
   38           | Expression . EQUAL Expression
   39           | Expression . NOTEQUAL Expression
   40           | Expression . LAND Expression
   41           | Expression . LOR Expression
   42           | Expression . '[' Expression ']'
   45           | '!' Expression .

    '['  shift, and go to state 74

    $default  reduce using rule 45 (Expression)


State 62

   31 Expression: Expression . '+' Expression
   32           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '%' Expression
   36           | Expression . '<' Expression
   37           | Expression . '>' Expression
   38           | Expression . EQUAL Expression
   39           | Expression . NOTEQUAL Expression
   40           | Expression . LAND Expression
   41           | Expression . LOR Expression
   42           | Expression . '[' Expression ']'
   48           | '(' Expression . ')'

    EQUAL     shift, and go to state 63
    NOTEQUAL  shift, and go to state 64
    LAND      shift, and go to state 65
    LOR       shift, and go to state 66
    '<'       shift, and go to state 67
    '>'       shift, and go to state 68
    '+'       shift, and go to state 69
    '-'       shift, and go to state 70
    '*'       shift, and go to state 71
    '/'       shift, and go to state 72
    '%'       shift, and go to state 73
    '['       shift, and go to state 74
    ')'       shift, and go to state 87


State 63

   38 Expression: Expression EQUAL . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 88
    Identifier  go to state 51


State 64

   39 Expression: Expression NOTEQUAL . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 89
    Identifier  go to state 51


State 65

   40 Expression: Expression LAND . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 90
    Identifier  go to state 51


State 66

   41 Expression: Expression LOR . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 91
    Identifier  go to state 51


State 67

   36 Expression: Expression '<' . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 92
    Identifier  go to state 51


State 68

   37 Expression: Expression '>' . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 93
    Identifier  go to state 51


State 69

   31 Expression: Expression '+' . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 94
    Identifier  go to state 51


State 70

   32 Expression: Expression '-' . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 95
    Identifier  go to state 51


State 71

   33 Expression: Expression '*' . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 96
    Identifier  go to state 51


State 72

   34 Expression: Expression '/' . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 97
    Identifier  go to state 51


State 73

   35 Expression: Expression '%' . Expression

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 98
    Identifier  go to state 51


State 74

   42 Expression: Expression '[' . Expression ']'

    INTEGER     shift, and go to state 46
    IDENTIFIER  shift, and go to state 12
    '-'         shift, and go to state 47
    '!'         shift, and go to state 48
    '('         shift, and go to state 49

    Expression  go to state 99
    Identifier  go to state 51


State 75

   30 Statement: RETURN Expression ';' .

    $default  reduce using rule 30 (Statement)


State 76

   47 Expression: Identifier '(' . Params ')'

    $default  reduce using rule 50 (Params)

    Params  go to state 100


State 77

   23 Statement: '{' Statements '}' .

    $default  reduce using rule 23 (Statement)


State 78

    7 VarDefn: Type . Identifier ';'
    8        | Type . Identifier '[' INTEGER ']' ';'

    IDENTIFIER  shift, and go to state 12

    Identifier  go to state 101


State 79

   21 Statements: Statements Statement .

    $default  reduce using rule 21 (Statements)


State 80

   18 FuncDecl: Type Identifier '(' . VarDecls ')' ';'

    $default  reduce using rule 10 (VarDecls)

    VarDecls  go to state 102


State 81

   27 Statement: Identifier '=' Expression . ';'
   31 Expression: Expression . '+' Expression
   32           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '%' Expression
   36           | Expression . '<' Expression
   37           | Expression . '>' Expression
   38           | Expression . EQUAL Expression
   39           | Expression . NOTEQUAL Expression
   40           | Expression . LAND Expression
   41           | Expression . LOR Expression
   42           | Expression . '[' Expression ']'

    EQUAL     shift, and go to state 63
    NOTEQUAL  shift, and go to state 64
    LAND      shift, and go to state 65
    LOR       shift, and go to state 66
    '<'       shift, and go to state 67
    '>'       shift, and go to state 68
    '+'       shift, and go to state 69
    '-'       shift, and go to state 70
    '*'       shift, and go to state 71
    '/'       shift, and go to state 72
    '%'       shift, and go to state 73
    '['       shift, and go to state 74
    ';'       shift, and go to state 103


State 82

   28 Statement: Identifier '[' Expression . ']' '=' Expression ';'
   31 Expression: Expression . '+' Expression
   32           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '%' Expression
   36           | Expression . '<' Expression
   37           | Expression . '>' Expression
   38           | Expression . EQUAL Expression
   39           | Expression . NOTEQUAL Expression
   40           | Expression . LAND Expression
   41           | Expression . LOR Expression
   42           | Expression . '[' Expression ']'

    EQUAL     shift, and go to state 63
    NOTEQUAL  shift, and go to state 64
    LAND      shift, and go to state 65
    LOR       shift, and go to state 66
    '<'       shift, and go to state 67
    '>'       shift, and go to state 68
    '+'       shift, and go to state 69
    '-'       shift, and go to state 70
    '*'       shift, and go to state 71
    '/'       shift, and go to state 72
    '%'       shift, and go to state 73
    '['       shift, and go to state 74
    ']'       shift, and go to state 104


State 83

   12 VarDecl: Type Identifier '[' INTEGER . ']'

    ']'  shift, and go to state 105


State 84

   13 VarDecl: Type Identifier '[' ']' .

    $default  reduce using rule 13 (VarDecl)


State 85

   24 Statement: IF '(' Expression ')' . Statement
   25          | IF '(' Expression ')' . Statement ELSE Statement

    T_INT       shift, and go to state 27
    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    RETURN      shift, and go to state 34
    IDENTIFIER  shift, and go to state 12
    '{'         shift, and go to state 35

    VarDefn     go to state 37
    Type        go to state 78
    Statement   go to state 106
    Identifier  go to state 41


State 86

   26 Statement: WHILE '(' Expression ')' . Statement

    T_INT       shift, and go to state 27
    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    RETURN      shift, and go to state 34
    IDENTIFIER  shift, and go to state 12
    '{'         shift, and go to state 35

    VarDefn     go to state 37
    Type        go to state 78
    Statement   go to state 107
    Identifier  go to state 41


State 87

   48 Expression: '(' Expression ')' .

    $default  reduce using rule 48 (Expression)


State 88

   31 Expression: Expression . '+' Expression
   32           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '%' Expression
   36           | Expression . '<' Expression
   37           | Expression . '>' Expression
   38           | Expression . EQUAL Expression
   38           | Expression EQUAL Expression .
   39           | Expression . NOTEQUAL Expression
   40           | Expression . LAND Expression
   41           | Expression . LOR Expression
   42           | Expression . '[' Expression ']'

    '<'  shift, and go to state 67
    '>'  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '%'  shift, and go to state 73
    '['  shift, and go to state 74

    $default  reduce using rule 38 (Expression)


State 89

   31 Expression: Expression . '+' Expression
   32           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '%' Expression
   36           | Expression . '<' Expression
   37           | Expression . '>' Expression
   38           | Expression . EQUAL Expression
   39           | Expression . NOTEQUAL Expression
   39           | Expression NOTEQUAL Expression .
   40           | Expression . LAND Expression
   41           | Expression . LOR Expression
   42           | Expression . '[' Expression ']'

    '<'  shift, and go to state 67
    '>'  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '%'  shift, and go to state 73
    '['  shift, and go to state 74

    $default  reduce using rule 39 (Expression)


State 90

   31 Expression: Expression . '+' Expression
   32           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '%' Expression
   36           | Expression . '<' Expression
   37           | Expression . '>' Expression
   38           | Expression . EQUAL Expression
   39           | Expression . NOTEQUAL Expression
   40           | Expression . LAND Expression
   40           | Expression LAND Expression .
   41           | Expression . LOR Expression
   42           | Expression . '[' Expression ']'

    EQUAL     shift, and go to state 63
    NOTEQUAL  shift, and go to state 64
    '<'       shift, and go to state 67
    '>'       shift, and go to state 68
    '+'       shift, and go to state 69
    '-'       shift, and go to state 70
    '*'       shift, and go to state 71
    '/'       shift, and go to state 72
    '%'       shift, and go to state 73
    '['       shift, and go to state 74

    $default  reduce using rule 40 (Expression)


State 91

   31 Expression: Expression . '+' Expression
   32           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '%' Expression
   36           | Expression . '<' Expression
   37           | Expression . '>' Expression
   38           | Expression . EQUAL Expression
   39           | Expression . NOTEQUAL Expression
   40           | Expression . LAND Expression
   41           | Expression . LOR Expression
   41           | Expression LOR Expression .
   42           | Expression . '[' Expression ']'
